Fix text alignment

--- a/narrowcast_content/spotify_now_playing/static/css/style.css
+++ b/narrowcast_content/spotify_now_playing/static/css/style.css
@@ -66,7 +66,7 @@ body {
     font-size: 2em;
     font-weight: bold;
     position: relative;
-    bottom: -6px;
+    bottom: -8px;
     grid-row: 1;
     grid-column-start: 2;
     grid-column-end: 4;
